# unconscious-mapper

./: .gitignore  AGENT_RULES.md  gitrules.md  google ai studio documentation.md  supabase connection.md  unconscious_analysis_architecture_v4.md
backend/: .env.example  pyproject.toml  scratch_list_models.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py
backend/app/api/: __init__.py  arc.py  chat.py  entries.py  graph.py
backend/app/prompts/: __init__.py  amplification.py  complex_detector.py  extractor.py  integration_risk.py  longitudinal_analyzer.py  persona.py  seed_extractor.py
backend/app/services/: __init__.py  amplification.py  analysis.py  chat.py  complexes.py  edges.py  graph.py  integration.py  integration_risk.py  longitudinal.py  retrieval.py  season_detector.py  unlock.py
backend/tests/: test_amplification.py  test_analysis.py  test_entries.py  test_graph.py
frontend/: middleware.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/chat/: ChatContent.tsx  page.tsx
frontend/app/components/: EntryCard.tsx  EntryForm.tsx
frontend/lib/: api.ts
frontend/lib/supabase/: client.ts  server.ts
new edits/: UI_CHANGES.md  edits.md  extractor.py  persona.py  seed_extractor.py
new edits/extracted/: amplification.py  complex_detector.py  integration_risk.py  longitudinal_analyzer.py  season_detector.py
(+3 files in other folders)
